refactoring css to use only mui patterns. NavBar work. Reviews collapsing bug fixed

--- a/src/Assets/Home/Home.css
+++ b/src/Assets/Home/Home.css
@@ -1,16 +1,1 @@
-.view.one {
-	height: calc(100vh - var(--header-height));
-	background-color: blanchedalmond;
-}
-.view.two {
-	height: 100vh;
-	background-color: burlywood;
-}
-.view.three {
-	height: 100vh;
-	background-color: antiquewhite;
-}
-.view.four {
-	height: calc(100vh - var(--footer-height));
-	background-color: beige;
-}
+
