--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,9 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Roboto";
-	overflow-x: hidden;
 }
 
 :root {
-	--header-height: 10vh;
 	--footer-height: 10vh;
 }
 
